--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "react-slick": "^0.30.2",
+    "react-slider": "^2.0.6",
     "redux": "^5.0.1",
     "sass": "^1.70.0"
   },
