--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server -w server/db.json"
+    "server": "json-server -w server/db.json -p 3001"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
